locking warning with kernel 5.8 rc and amdgpu.dc=0
I have used amdgpu.dc=0
as a possible workaround for issue #1171 (closed), but I get a non-fatal warning bellow. The kernel is 5.8.0-0.rc5.1.fc33.ppc64le, the system is Raptor Talos II with Power9 CPU and Radeon WX4100.
[ 1006.168870] ------------[ cut here ]------------
[ 1006.168896] WARNING: CPU: 17 PID: 3280 at drivers/gpu/drm/drm_modeset_lock.c:185 drm_warn_on_modeset_not_all_locked.part.0+0x9c/0xd0 [drm]
[ 1006.168897] Modules linked in: kvm_hv kvm xt_CHECKSUM xt_MASQUERADE tun nfsv3 nfs_acl rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace sunrpc fscache nf_nat_tftp nf_conntrack_tftp xt_CT ip6t_rpfilter ip6t_REJECT nf_reject_ipv6 ipt_REJECT nf_reject_ipv4 xt_conntrack ebtable_nat ebtable_broute ip6table_nat ip6table_mangle ip6table_raw ip6table_security iptable_nat nf_nat iptable_mangle iptable_raw iptable_security nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 bridge stp llc rfkill ip_set nfnetlink ebtable_filter ebtables ip6table_filter ip6_tables iptable_filter i2c_dev dm_crypt snd_hda_codec_realtek snd_hda_codec_generic ftdi_sio ledtrig_audio snd_hda_codec_hdmi snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hda_core snd_hwdep snd_seq at24 ses snd_seq_device regmap_i2c enclosure vmx_crypto snd_pcm scsi_transport_sas snd_timer ipmi_powernv snd ofpart soundcore ipmi_devintf powernv_flash i2c_opal ipmi_msghandler mtd rtc_opal crct10dif_vpmsum opal_prd ip_tables amdgpu raid1
[ 1006.168934] mfd_core gpu_sched i2c_algo_bit ttm drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops cec crc32c_vpmsum drm nvme aacraid tg3 nvme_core i2c_core xhci_pci xhci_pci_renesas drm_panel_orientation_quirks fuse
[ 1006.168949] CPU: 17 PID: 3280 Comm: Xorg Not tainted 5.8.0-0.rc5.1.fc33.ppc64le #1
[ 1006.168951] NIP: c008000006575fc4 LR: c008000006575fb8 CTR: c000000000202be0
[ 1006.168953] REGS: c00000077885f460 TRAP: 0700 Not tainted (5.8.0-0.rc5.1.fc33.ppc64le)
[ 1006.168954] MSR: 9000000000029033 <SF,HV,EE,ME,IR,DR,RI,LE> CR: 28428808 XER: 00000000
[ 1006.168961] CFAR: c000000000202bf8 IRQMASK: 0
GPR00: c008000006575fb8 c00000077885f6f0 c0080000065d5300 0000000000000001
GPR04: c0000007dc9b80a0 0000000000000000 0000000000000000 c000200722833200
GPR08: c0000007dc9b12d8 0000000000000000 00000000ffffffef c0080000065aa0b8
GPR12: c000000000202be0 c0000007fffebe00 00007fffda6af1f0 0000000000000001
GPR16: 0000000000000000 0000000156e2cc00 0000000000000001 0000000000000004
GPR20: c0080000065822e8 c00000077885fc38 c0080000084023e8 c000200722833200
GPR24: 0000000000000000 0000000000000000 ffffffffeeeeeeee c0000007dc9b80a0
GPR28: c0000007dc9b1000 c0000007dc9b1000 c0000007dc9b1308 c0000007dc9b12f8
[ 1006.168994] NIP [c008000006575fc4] drm_warn_on_modeset_not_all_locked.part.0+0x9c/0xd0 [drm]
[ 1006.169010] LR [c008000006575fb8] drm_warn_on_modeset_not_all_locked.part.0+0x90/0xd0 [drm]
[ 1006.169011] Call Trace:
[ 1006.169014] [c00000077885f6f0] [c00000077885f760] 0xc00000077885f760 (unreliable)
[ 1006.169025] [c00000077885f730] [c008000006ea0b1c] drm_crtc_helper_set_mode+0xa4/0x5f0 [drm_kms_helper]
[ 1006.169091] [c00000077885f9b0] [c008000007e8537c] amdgpu_connector_set_property+0x534/0x790 [amdgpu]
[ 1006.169109] [c00000077885fa00] [c008000006582230] drm_connector_set_obj_prop+0x68/0x120 [drm]
[ 1006.169125] [c00000077885fa40] [c008000006584f40] drm_mode_obj_set_property_ioctl+0x418/0x540 [drm]
[ 1006.169143] [c00000077885fb30] [c00800000658232c] drm_connector_property_set_ioctl+0x44/0x60 [drm]
[ 1006.169157] [c00000077885fb70] [c008000006556c90] drm_ioctl_kernel+0xe8/0x210 [drm]
[ 1006.169175] [c00000077885fbd0] [c00800000655720c] drm_ioctl+0x234/0x480 [drm]
[ 1006.169229] [c00000077885fd20] [c008000007e70078] amdgpu_drm_ioctl+0x70/0xd0 [amdgpu]
[ 1006.169235] [c00000077885fd70] [c00000000057b004] sys_ioctl+0xf4/0x150
[ 1006.169239] [c00000077885fdc0] [c000000000032904] system_call_exception+0xe4/0x170
[ 1006.169241] [c00000077885fe20] [c00000000000ca70] system_call_common+0xf0/0x278
[ 1006.169242] Instruction dump:
[ 1006.169244] 4082ffdc 387d01b8 4803411d e8410018 68630001 5463063e 0b030000 387d0198
[ 1006.169250] 48034105 e8410018 68630001 5463063e <0b030000> 38210040 e8010010 eba1ffe8
[ 1006.169256] ---[ end trace 2c81ab8e12162460 ]---
[ 1006.169279] ------------[ cut here ]------------
[ 1006.169287] WARNING: CPU: 17 PID: 3280 at drivers/gpu/drm/drm_crtc_helper.c:148 drm_helper_crtc_in_use+0x11c/0x130 [drm_kms_helper]
[ 1006.169288] Modules linked in: kvm_hv kvm xt_CHECKSUM xt_MASQUERADE tun nfsv3 nfs_acl rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace sunrpc fscache nf_nat_tftp nf_conntrack_tftp xt_CT ip6t_rpfilter ip6t_REJECT nf_reject_ipv6 ipt_REJECT nf_reject_ipv4 xt_conntrack ebtable_nat ebtable_broute ip6table_nat ip6table_mangle ip6table_raw ip6table_security iptable_nat nf_nat iptable_mangle iptable_raw iptable_security nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 bridge stp llc rfkill ip_set nfnetlink ebtable_filter ebtables ip6table_filter ip6_tables iptable_filter i2c_dev dm_crypt snd_hda_codec_realtek snd_hda_codec_generic ftdi_sio ledtrig_audio snd_hda_codec_hdmi snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hda_core snd_hwdep snd_seq at24 ses snd_seq_device regmap_i2c enclosure vmx_crypto snd_pcm scsi_transport_sas snd_timer ipmi_powernv snd ofpart soundcore ipmi_devintf powernv_flash i2c_opal ipmi_msghandler mtd rtc_opal crct10dif_vpmsum opal_prd ip_tables amdgpu raid1
[ 1006.169317] mfd_core gpu_sched i2c_algo_bit ttm drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops cec crc32c_vpmsum drm nvme aacraid tg3 nvme_core i2c_core xhci_pci xhci_pci_renesas drm_panel_orientation_quirks fuse
[ 1006.169327] CPU: 17 PID: 3280 Comm: Xorg Tainted: G W --------- --- 5.8.0-0.rc5.1.fc33.ppc64le #1
[ 1006.169329] NIP: c008000006ea0a64 LR: c008000006ea0a58 CTR: c000000000202be0
[ 1006.169330] REGS: c00000077885f460 TRAP: 0700 Tainted: G W --------- --- (5.8.0-0.rc5.1.fc33.ppc64le)
[ 1006.169331] MSR: 9000000000029033 <SF,HV,EE,ME,IR,DR,RI,LE> CR: 28428808 XER: 00000000
[ 1006.169336] CFAR: c000000000202bf8 IRQMASK: 0
GPR00: c008000006ea0a58 c00000077885f6f0 c008000006edc400 0000000000000000
GPR04: c0000007dc9b80a0 0000000000000000 0000000000000000 c000200722833200
GPR08: c0000007dc9b12d8 0000000000000001 00000000ffffffef c008000006ec9aa0
GPR12: c000000000202be0 c0000007fffebe00 00007fffda6af1f0 0000000000000001
GPR16: 0000000000000000 0000000156e2cc00 0000000000000001 0000000000000001
GPR20: c0080000065822e8 c00000077885fc38 c0080000084023e8 c000200722833200
GPR24: 0000000000000000 0000000000000000 ffffffffeeeeeeee c0000007dc9b80a0
GPR28: c0000007dc9b1000 c0000007dc9b8000 c0000007dc9b1000 c0000007deb7c180
[ 1006.169359] NIP [c008000006ea0a64] drm_helper_crtc_in_use+0x11c/0x130 [drm_kms_helper]
[ 1006.169366] LR [c008000006ea0a58] drm_helper_crtc_in_use+0x110/0x130 [drm_kms_helper]
[ 1006.169367] Call Trace:
[ 1006.169368] [c00000077885f6f0] [c00000077885f760] 0xc00000077885f760 (unreliable)
[ 1006.169376] [c00000077885f730] [c008000006ea0b2c] drm_crtc_helper_set_mode+0xb4/0x5f0 [drm_kms_helper]
[ 1006.169440] [c00000077885f9b0] [c008000007e8537c] amdgpu_connector_set_property+0x534/0x790 [amdgpu]
[ 1006.169457] [c00000077885fa00] [c008000006582230] drm_connector_set_obj_prop+0x68/0x120 [drm]
[ 1006.169473] [c00000077885fa40] [c008000006584f40] drm_mode_obj_set_property_ioctl+0x418/0x540 [drm]
[ 1006.169489] [c00000077885fb30] [c00800000658232c] drm_connector_property_set_ioctl+0x44/0x60 [drm]
[ 1006.169503] [c00000077885fb70] [c008000006556c90] drm_ioctl_kernel+0xe8/0x210 [drm]
[ 1006.169518] [c00000077885fbd0] [c00800000655720c] drm_ioctl+0x234/0x480 [drm]
[ 1006.169572] [c00000077885fd20] [c008000007e70078] amdgpu_drm_ioctl+0x70/0xd0 [amdgpu]
[ 1006.169576] [c00000077885fd70] [c00000000057b004] sys_ioctl+0xf4/0x150
[ 1006.169579] [c00000077885fdc0] [c000000000032904] system_call_exception+0xe4/0x170
[ 1006.169581] [c00000077885fe20] [c00000000000ca70] system_call_common+0xf0/0x278
[ 1006.169582] Instruction dump:
[ 1006.169584] 38600000 e8010010 eba1ffe8 ebc1fff0 ebe1fff8 7c0803a6 4e800020 387e0198
[ 1006.169590] 4802904d e8410018 68690001 5529063e <0b090000> 4bffff58 60420000 0003b988
[ 1006.169595] ---[ end trace 2c81ab8e12162461 ]---
[ 1006.169618] ------------[ cut here ]------------
[ 1006.169626] WARNING: CPU: 17 PID: 3280 at drivers/gpu/drm/drm_crtc_helper.c:108 drm_helper_encoder_in_use+0x11c/0x150 [drm_kms_helper]
[ 1006.169627] Modules linked in: kvm_hv kvm xt_CHECKSUM xt_MASQUERADE tun nfsv3 nfs_acl rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace sunrpc fscache nf_nat_tftp nf_conntrack_tftp xt_CT ip6t_rpfilter ip6t_REJECT nf_reject_ipv6 ipt_REJECT nf_reject_ipv4 xt_conntrack ebtable_nat ebtable_broute ip6table_nat ip6table_mangle ip6table_raw ip6table_security iptable_nat nf_nat iptable_mangle iptable_raw iptable_security nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 bridge stp llc rfkill ip_set nfnetlink ebtable_filter ebtables ip6table_filter ip6_tables iptable_filter i2c_dev dm_crypt snd_hda_codec_realtek snd_hda_codec_generic ftdi_sio ledtrig_audio snd_hda_codec_hdmi snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hda_core snd_hwdep snd_seq at24 ses snd_seq_device regmap_i2c enclosure vmx_crypto snd_pcm scsi_transport_sas snd_timer ipmi_powernv snd ofpart soundcore ipmi_devintf powernv_flash i2c_opal ipmi_msghandler mtd rtc_opal crct10dif_vpmsum opal_prd ip_tables amdgpu raid1
[ 1006.169656] mfd_core gpu_sched i2c_algo_bit ttm drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops cec crc32c_vpmsum drm nvme aacraid tg3 nvme_core i2c_core xhci_pci xhci_pci_renesas drm_panel_orientation_quirks fuse
[ 1006.169666] CPU: 17 PID: 3280 Comm: Xorg Tainted: G W --------- --- 5.8.0-0.rc5.1.fc33.ppc64le #1
[ 1006.169668] NIP: c008000006ea0914 LR: c008000006ea0908 CTR: c000000000202be0
[ 1006.169669] REGS: c00000077885f420 TRAP: 0700 Tainted: G W --------- --- (5.8.0-0.rc5.1.fc33.ppc64le)
[ 1006.169670] MSR: 9000000000029033 <SF,HV,EE,ME,IR,DR,RI,LE> CR: 28428808 XER: 00000000
[ 1006.169675] CFAR: c000000000202bf8 IRQMASK: 0
GPR00: c008000006ea0908 c00000077885f6b0 c008000006edc400 0000000000000000
GPR04: c0000007dc9b80a0 0000000000000000 0000000000000000 c000200722833200
GPR08: c0000007dc9b12d8 0000000000000001 00000000ffffffef c008000006ec9aa0
GPR12: c000000000202be0 c0000007fffebe00 00007fffda6af1f0 0000000000000001
GPR16: 0000000000000000 0000000156e2cc00 0000000000000001 0000000000000001
GPR20: c0080000065822e8 c00000077885fc38 c0080000084023e8 c000200722833200
GPR24: 0000000000000000 0000000000000000 ffffffffeeeeeeee c0000007dc9b80a0
GPR28: c0000007dc9b1000 c0000007dc9b8000 c0000007dc9b1000 c0000007d73e3000
[ 1006.169697] NIP [c008000006ea0914] drm_helper_encoder_in_use+0x11c/0x150 [drm_kms_helper]
[ 1006.169704] LR [c008000006ea0908] drm_helper_encoder_in_use+0x110/0x150 [drm_kms_helper]
[ 1006.169705] Call Trace:
[ 1006.169711] [c00000077885f6f0] [c008000006ea0a04] drm_helper_crtc_in_use+0xbc/0x130 [drm_kms_helper]
[ 1006.169719] [c00000077885f730] [c008000006ea0b2c] drm_crtc_helper_set_mode+0xb4/0x5f0 [drm_kms_helper]
[ 1006.169781] [c00000077885f9b0] [c008000007e8537c] amdgpu_connector_set_property+0x534/0x790 [amdgpu]
[ 1006.169798] [c00000077885fa00] [c008000006582230] drm_connector_set_obj_prop+0x68/0x120 [drm]
[ 1006.169814] [c00000077885fa40] [c008000006584f40] drm_mode_obj_set_property_ioctl+0x418/0x540 [drm]
[ 1006.169830] [c00000077885fb30] [c00800000658232c] drm_connector_property_set_ioctl+0x44/0x60 [drm]
[ 1006.169844] [c00000077885fb70] [c008000006556c90] drm_ioctl_kernel+0xe8/0x210 [drm]
[ 1006.169858] [c00000077885fbd0] [c00800000655720c] drm_ioctl+0x234/0x480 [drm]
[ 1006.169912] [c00000077885fd20] [c008000007e70078] amdgpu_drm_ioctl+0x70/0xd0 [amdgpu]
[ 1006.169916] [c00000077885fd70] [c00000000057b004] sys_ioctl+0xf4/0x150
[ 1006.169919] [c00000077885fdc0] [c000000000032904] system_call_exception+0xe4/0x170
[ 1006.169921] [c00000077885fe20] [c00000000000ca70] system_call_common+0xf0/0x278
[ 1006.169922] Instruction dump:
[ 1006.169924] e8010010 ebc1fff0 ebe1fff8 7c0803a6 4e800020 60000000 60420000 387e0198
[ 1006.169929] 4802919d e8410018 68690001 5529063e <0b090000> 387e01b8 48029185 e8410018
[ 1006.169934] ---[ end trace 2c81ab8e12162462 ]---